Attempt to backport for 1.16.5/JDK8